fix: Action item alignments

--- a/app/style/panel/panel.less
+++ b/app/style/panel/panel.less
@@ -37,14 +37,15 @@
   &__action-item {
     height: 48px;
     border-bottom: 1px solid fade(@graphite-dark, 8%);
-    margin: 0 20px;
+    margin: 0 16px;
     display: flex;
     align-items: center;
     cursor: pointer;
     user-select: none;
 
     &__icon {
-      width: 44px;
+      width: 40px;
+      margin-left: 4px;
       display: flex;
       path {
         fill: @graphite-dark;
